[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79"}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.5.7" ,default-features = false,features = ["runtime-actix-rustls","macros","postgres","uuid","chrono","migrate"]}
config = {version = "0.13.0", default-features = false, features = ["yaml"] }
chrono = "0.4.19"
uuid = { version = "0.8.2", features = ["v4"] }
tracing = { version = "0.1.33", features = ["log"] }
tracing-subscriber = { version = "0.3.11", features = ["registry","env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
once_cell = "1.10.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.5.1"

[dev-dependencies]
reqwest = "0.11.10"
